--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,10 +8,10 @@ data-source:
     host: 192.168.5.162
     port: 6379
     database: 0
-    max-active: 100 # 连接池最大连接数（使用负值表示没有限制）
-    max-idle: 100 # 连接池中的最大空闲连接
-    min-idle: 50 # 连接池中的最小空闲连接
-    max-wait: 6000 # 连接池最大阻塞等待时间（使用负值表示没有限制）
+    max-active: 100
+    max-idle: 100
+    min-idle: 50
+    max-wait: 6000
   elasticsearch:
     host: 127.0.0.1
     port: 9200
